--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.11",
     "postgres": "^3.4.7",
     "zod": "^4.1.13"
   }
